--- a/pocs/poc-ethereum-truffle/Dockerfile
+++ b/pocs/poc-ethereum-truffle/Dockerfile
@@ -6,5 +6,6 @@ RUN npm install -g truffle
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
 
-# Comando por defecto para iniciar una shell en el contenedor
-CMD ["bash"]
+COPY . .
+
+CMD ["truffle", "develop"]
