--- a/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
+++ b/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
@@ -8,4 +8,8 @@ WORKDIR /app
 
 COPY . .
 
-CMD ["truffle", "develop"]
+RUN truffle init
+RUN truffle compile 
+# RUN truffle migrate --network development
+
+CMD ["/bin/bash"]
