agregando endpoint para obtener el abi e invocar smart contracts

--- a/pocs/poc-ethereum-truffle/docker-compose.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose.yml
@@ -14,12 +14,6 @@ services:
         - --port=7545    # Puerto del servicio Ganache
         - --chain.chainId=1337 # Chain ID personalizado para evitar conflictos con Metamask
         - --wallet.totalAccounts=10 # Número de cuentas preconfiguradas
-      # healthcheck:
-      #   test: ["CMD", "nc", "-z", "localhost", "7545"]
-      #   interval: 5s
-      #   timeout: 3s
-      #   retries: 5
-
 
 
   smart-contracts-deployer:
@@ -30,13 +24,16 @@ services:
     container_name: smart-contracts-deployer
     depends_on:
       - ganache
+    volumes:
+      - ./abi:/app/build/contracts
     command: truffle migrate --network development
-      # ganache:
-      #   condition: service_healthy
-    # network_mode: host
     # stdin_open: true
     # tty: true
   
+
+
+
+
 
   dapp:
     build:
@@ -46,10 +43,9 @@ services:
       - ganache
     volumes:
       - ./dapp/index.js:/app/index.js
-    # working_dir: /usr/src/app
+      - ./abi:/app/abi
     environment:
       - BLOCKCHAIN_URL=http://ganache:7545
-      - CONTRACT_ADDRESS=0xYourSmartContractAddress
     ports:
         - "3000:3000"
   #   stdin_open: true
