agregando metodos de lectura y escritura para invocar el smart contract de forma segura

--- a/pocs/poc-ethereum-truffle/dapp/Dockerfile
+++ b/pocs/poc-ethereum-truffle/dapp/Dockerfile
@@ -3,7 +3,8 @@ FROM node:16
 WORKDIR /app
 
 COPY . .
-RUN npm install web3 dotenv express
+RUN npm install web3 dotenv express body-parser
 RUN npm install
+RUN npm install -g truffle
 
 CMD ["node", "index.js"]
