agregando funcionalidad para Registry de contratos desplegados

--- a/pocs/poc-ethereum-truffle/docker-compose.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose.yml
@@ -26,9 +26,9 @@ services:
       - ganache
     volumes:
       - ./abi:/app/build/contracts
-    command: truffle migrate --network development
-    # stdin_open: true
-    # tty: true
+    command: truffle migrate --network development & 
+    stdin_open: true
+    tty: true
   
 
 
