--- a/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
+++ b/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
@@ -10,6 +10,9 @@ COPY . .
 
 RUN truffle init
 RUN truffle compile 
+
+RUN npm install axios
+RUN npm install
 # RUN truffle migrate --network development
 
 CMD ["/bin/bash"]
