--- a/pocs/poc-ethereum-truffle/dapp/Dockerfile
+++ b/pocs/poc-ethereum-truffle/dapp/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16
 WORKDIR /app
 
 COPY . .
-RUN npm install web3 dotenv express body-parser
+RUN npm install web3 dotenv express body-parser axios
 RUN npm install
 RUN npm install -g truffle
 
