--- a/pocs/poc-esp32-mqtt-tls/Dockerfile
+++ b/pocs/poc-esp32-mqtt-tls/Dockerfile
@@ -10,7 +10,7 @@ ENV IDF_LIB_PATH=/opt/esp/esp-idf-lib
 # VOLUME /project
 WORKDIR /project
 COPY . .
-RUN . /opt/esp/idf/export.sh && idf.py clean build
+# RUN . /opt/esp/idf/export.sh && idf.py clean build
 # RUN apt-get update && apt-get install ruby-full -y
 # RUN gem install ceedling
 
