--- a/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
+++ b/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
@@ -1,18 +1,19 @@
 FROM node:16
 
-# Instala Truffle globalmente
-RUN npm install -g truffle
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
 
 COPY . .
 
+# Instala Truffle globalmente
+RUN npm install axios dotenv @truffle/hdwallet-provider 
+RUN npm install
+RUN npm install -g truffle
+
 RUN truffle init
 RUN truffle compile 
 
-RUN npm install axios @truffle/hdwallet-provider
-RUN npm install
 # RUN truffle migrate --network development
 
 CMD ["/bin/bash"]
