agregando componentes en el diagrama de arquitectura, agregando terraform

--- a/pocs/poc-aws-setup/Dockerfile
+++ b/pocs/poc-aws-setup/Dockerfile
@@ -4,5 +4,11 @@ WORKDIR /workspace
 
 COPY terraform/* /workspace/
 
-entrypoint ["terraform", "apply"]
+# COPY entrypoint-create.sh /entrypoint-create.sh
+
+# RUN chmod +x /entrypoint.sh
+
+# ENTRYPOINT ["/entrypoint.sh"]
+
+# entrypoint ["terraform", "apply"]
 # CMD ["terraform", "-version"]
