glue schema, docker debug, esp32 geo y sntp setup

--- a/pocs/poc-esp32-mqtt-tls/docker-compose-client.yml
+++ b/pocs/poc-esp32-mqtt-tls/docker-compose-client.yml
@@ -2,6 +2,9 @@ version: '3'
 
 services:
 
+# 
+# DEPLOY
+# 
   esp32:
     build: .
     image: daoit/daoit-esp32-mqtt-tls
@@ -11,3 +14,17 @@ services:
       - .:/project
     command: idf.py clean build flash --port /dev/ttyUSB0
   
+
+# 
+# DEBUG
+# 
+    # esp32:
+    #   build: .
+    #   image: daoit/daoit-esp32-mqtt-tls
+    #   devices:
+    #     - "/dev/ttyUSB0:/dev/ttyUSB0"
+    #   volumes:
+    #     - .:/project
+    #   stdin_open: true
+    #   tty: true
+    #   command: idf.py monitor --port /dev/ttyUSB0
