mejorando contratos de apis, agregando Swagger/openapi

--- a/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
@@ -4,19 +4,19 @@ services:
 
 
       
-  # smart-contracts-deployer:
-  #   build:
-  #     context: ./smart-contracts
-  #     dockerfile: Dockerfile
-  #   image: poc-ethereum-smart-contracts-deployer
-  #   container_name: poc-ethereum-smart-contracts-deployer
-  #   volumes:
-  #     - ./abi:/app/build/contracts
-  #   env_file:
-  #     - ./dev.env
-  #   command: truffle migrate --network holesky & 
-  #   stdin_open: true
-  #   tty: true
+  smart-contracts-deployer:
+    build:
+      context: ./smart-contracts
+      dockerfile: Dockerfile
+    image: poc-ethereum-smart-contracts-deployer
+    container_name: poc-ethereum-smart-contracts-deployer
+    volumes:
+      - ./abi:/app/build/contracts
+    env_file:
+      - ./_holesky.env
+    command: truffle migrate --network holesky & 
+    stdin_open: true
+    tty: true
   
 
 
@@ -33,6 +33,6 @@ services:
       - ./dapp/index.js:/app/index.js
       - ./abi:/app/abi
     env_file:
-      - ./dev.env
+      - ./_holesky.env
     ports:
         - "3000:3000"
