--- a/pocs/poc-ethereum-truffle/docker-compose-ganache.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose-ganache.yml
@@ -14,6 +14,8 @@ services:
         - --port=7545    # Puerto del servicio Ganache
         - --chain.chainId=1337 # Chain ID personalizado para evitar conflictos con Metamask
         - --wallet.totalAccounts=10 # Número de cuentas preconfiguradas
+        - --wallet.mnemonic="candy maple cake sugar pudding cream honey rich smooth crumble sweet treat"
+    
 
 
   smart-contracts-deployer:
@@ -26,6 +28,8 @@ services:
       - ganache
     volumes:
       - ./abi:/app/build/contracts
+    env_file:
+      - ./_ganache.env
     command: truffle migrate --network development & 
     stdin_open: true
     tty: true
@@ -46,7 +50,7 @@ services:
     volumes:
       - ./dapp/index.js:/app/index.js
       - ./abi:/app/abi
-    environment:
-      - BLOCKCHAIN_URL=http://ganache:7545
+    env_file:
+      - ./_ganache.env
     ports:
         - "3000:3000"
