agregando captura de datos del contrato durante el despliegue, agregando modificaciones en el expense service y forma en la cual se capturan los costos de las transacciones

--- a/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
+++ b/pocs/poc-ethereum-truffle/smart-contracts/Dockerfile
@@ -4,16 +4,16 @@ FROM node:16
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
 
-COPY . .
 
 # Instala Truffle globalmente
-RUN npm install axios dotenv @truffle/hdwallet-provider 
-RUN npm install
+RUN npm install axios dotenv @truffle/hdwallet-provider  json-stringify-safe
+# RUN npm install
 RUN npm install -g truffle
 
 RUN truffle init
 RUN truffle compile 
 
+COPY . .
 # RUN truffle migrate --network development
 
 CMD ["/bin/bash"]
