--- a/pocs/poc-ethereum-truffle/docker-compose-ganache.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose-ganache.yml
@@ -63,8 +63,8 @@ services:
 
   dapp:
     build:
-      context: ./dapp
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: dapp.Dockerfile
     image: poc-ethereum-dapp
     container_name: poc-ethereum-dapp
     depends_on:
@@ -72,7 +72,25 @@ services:
     volumes:
       - ./dapp/index.js:/app/index.js
       - ./abi:/app/abi
+      - ~/.aws:/root/.aws
     env_file:
       - ./_ganache.env
+    environment:
+      - AWS_PROFILE=dev 
     ports:
         - "3000:3000"
+  # dapp:
+  #   build:
+  #     context: ./dapp
+  #     dockerfile: Dockerfile
+  #   image: poc-ethereum-dapp
+  #   container_name: poc-ethereum-dapp
+  #   depends_on:
+  #     - ganache
+  #   volumes:
+  #     - ./dapp/index.js:/app/index.js
+  #     - ./abi:/app/abi
+  #   env_file:
+  #     - ./_ganache.env
+  #   ports:
+  #       - "3000:3000"
