--- a/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
@@ -3,36 +3,71 @@
 services:
 
 
-      
-  smart-contracts-deployer:
+
+
+  truffle-deployer:
     build:
-      context: ./smart-contracts
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: smart-contracts.Dockerfile
     image: poc-ethereum-smart-contracts-deployer
     container_name: poc-ethereum-smart-contracts-deployer
     volumes:
-      - ./abi:/app/build/contracts
+      - ~/.aws:/root/.aws
     env_file:
       - ./_holesky.env
-    command: truffle migrate --network holesky & 
+    environment:
+      - AWS_PROFILE=dev 
+    command: /bin/bash -c "truffle migrate --network holesky || true; sleep infinity"
     stdin_open: true
     tty: true
+
+
+  dapp:
+    build:
+      context: .
+      dockerfile: dapp.Dockerfile
+    image: poc-ethereum-dapp
+    container_name: poc-ethereum-dapp
+    volumes:
+      - ~/.aws:/root/.aws
+    env_file:
+      - ./_holesky.env
+    environment:
+      - AWS_PROFILE=dev 
+    ports:
+        - "3000:3000"
+
+
+      
+  # smart-contracts-deployer:
+  #   build:
+  #     context: ./smart-contracts
+  #     dockerfile: Dockerfile
+  #   image: poc-ethereum-smart-contracts-deployer
+  #   container_name: poc-ethereum-smart-contracts-deployer
+  #   volumes:
+  #     - ./abi:/app/build/contracts
+  #   env_file:
+  #     - ./_holesky.env
+  #   command: truffle migrate --network holesky & 
+  #   stdin_open: true
+  #   tty: true
   
 
 
 
 
 
-  dapp:
-    build:
-      context: ./dapp
-      dockerfile: Dockerfile
-    image: poc-ethereum-dapp
-    container_name: poc-ethereum-dapp
-    volumes:
-      - ./dapp/index.js:/app/index.js
-      - ./abi:/app/abi
-    env_file:
-      - ./_holesky.env
-    ports:
-        - "3000:3000"
+  # dapp:
+  #   build:
+  #     context: ./dapp
+  #     dockerfile: Dockerfile
+  #   image: poc-ethereum-dapp
+  #   container_name: poc-ethereum-dapp
+  #   volumes:
+  #     - ./dapp/index.js:/app/index.js
+  #     - ./abi:/app/abi
+  #   env_file:
+  #     - ./_holesky.env
+  #   ports:
+  #       - "3000:3000"
