--- a/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
+++ b/pocs/poc-ethereum-truffle/docker-compose-holesky.yml
@@ -2,15 +2,12 @@
    
 services:
 
-
-
-
   truffle-deployer:
     build:
       context: .
-      dockerfile: smart-contracts.Dockerfile
-    image: poc-ethereum-smart-contracts-deployer
-    container_name: poc-ethereum-smart-contracts-deployer
+      dockerfile: Dockerfile.truffle-deployer
+    image: truffle-deployer
+    container_name: truffle-deployer
     volumes:
       - ~/.aws:/root/.aws
     env_file:
@@ -21,13 +18,12 @@ services:
     stdin_open: true
     tty: true
 
-
   dapp:
     build:
       context: .
-      dockerfile: dapp.Dockerfile
-    image: poc-ethereum-dapp
-    container_name: poc-ethereum-dapp
+      dockerfile: Dockerfile.dapp
+    image: dapp
+    container_name: dapp
     volumes:
       - ~/.aws:/root/.aws
     env_file:
@@ -37,37 +33,3 @@ services:
     ports:
         - "3000:3000"
 
-
-      
-  # smart-contracts-deployer:
-  #   build:
-  #     context: ./smart-contracts
-  #     dockerfile: Dockerfile
-  #   image: poc-ethereum-smart-contracts-deployer
-  #   container_name: poc-ethereum-smart-contracts-deployer
-  #   volumes:
-  #     - ./abi:/app/build/contracts
-  #   env_file:
-  #     - ./_holesky.env
-  #   command: truffle migrate --network holesky & 
-  #   stdin_open: true
-  #   tty: true
-  
-
-
-
-
-
-  # dapp:
-  #   build:
-  #     context: ./dapp
-  #     dockerfile: Dockerfile
-  #   image: poc-ethereum-dapp
-  #   container_name: poc-ethereum-dapp
-  #   volumes:
-  #     - ./dapp/index.js:/app/index.js
-  #     - ./abi:/app/abi
-  #   env_file:
-  #     - ./_holesky.env
-  #   ports:
-  #       - "3000:3000"
